# stest

./: CMakeLists.txt  README.md  rialisation.xlsx
doc/: CMakeLists.txt  doxy.conf.in
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _dart_configuration_8tcl.html  _resource_8h.html  _resource_8h_source.html  annotated.html  build_2testsit_2it_tests_8cxx.html  classes.html  dir_27b46d9a629fbcca21e036dcf90df5ed.html  dir_31383f503091b02c885bc982bdf333e5.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5c761713bf5d0875d267b95dac50e2aa.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_8c0a8a1630fbdf1971685e7da94b0aa3.html  dir_9621c18ae5e2e1bdca7f1d172afba164.html  dir_c29eeb5af533606caea8a09e66794740.html  dir_c3e8e96f4c8c82e65087dbb354289d16.html  dir_ca7c3bc2f90407506c04b666efd96fe0.html  dir_e3a4aa6ae53c85312025264fe419cff9.html  dir_f1ec956244e0b4817113a730319c4d69.html  feature__tests_8c.html  feature__tests_8cxx.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__rank.html  group__test.html  install_2include_2rank_8h.html  install_2include_2rank_8h_source.html  interfacerank.html  menudata.js  modules.html  rank_2rank_8h.html  rank_2rank_8h_source.html  rank_8cpp.html  (+11 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
install/lib/: rank.lib
install/lib/cmake/rank/: rankConfig-debug.cmake  rankConfig.cmake  rankConfigVersion.cmake
rank/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Resource.h  cmake_install.cmake  rank.VC.db  rank.cpp  rank.h  rank.rc.in  rank.sln  rank.vcxproj  rank.vcxproj.filters  rankConfig.cmake
rank/tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  precise_num.vcxproj  precise_num.vcxproj.filters  precise_sum.vcxproj  precise_sum.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  simple_sum.vcxproj  simple_sum.vcxproj.filters  test_first_numeric.cpp  test_first_sum.cpp  test_second_numeric.cpp  test_second_sum.cpp
sample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Sample.sln  Sample.vcxproj  Sample.vcxproj.filters  cmake_install.cmake  sample.cpp
testsit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  itTests.cxx  itTests.vcxproj  itTests.vcxproj.filters  sum.cpp  testit.sln
